--- a/config.org
+++ b/config.org
@@ -359,23 +359,30 @@
     :ensure t)
   (setq geiser-active-implementations '(guile))
 #+END_SRC
+* ob-ipython
+#+BEGIN_SRC emacs-lisp
+  (use-package ob-ipython
+    :ensure t)
+#+END_SRC
+
 
 * python-interaction
 #+BEGIN_SRC emacs-lisp
-  (setq python-shell-interpreter "/home/durbar/anaconda3/bin/ipython"
+  (setq python-shell-interpreter "/usr/bin/ipython"
 	python-shell-interpreter-args "--simple-prompt -i")
 #+END_SRC
 
 * org-babel-python
 #+BEGIN_SRC emacs-lisp
-  (setq org-babel-python-command "/home/durbar/anaconda3/bin/python")
+  (setq org-babel-python-command "/usr/bin/python")
 #+END_SRC
 
 * org-python
 #+BEGIN_SRC emacs-lisp
   (org-babel-do-load-languages
    'org-babel-load-languages
-   '((python . t)))
+   '((python . t)
+     (ipython . t)))
 #+END_SRC
 
 * paredit
