--- a/config.org
+++ b/config.org
@@ -816,7 +816,7 @@
 
 ** slime config
 #+BEGIN_SRC emacs-lisp
-  (load (expand-file-name "~/quicklisp/slime-helper.el"))
+  ;;;(load (expand-file-name "~/quicklisp/slime-helper.el"))
   (setq inferior-lisp-program "/usr/bin/sbcl")
   (setq slime-contribs '(slime-fancy))
 #+END_SRC
